--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Infinite Crypto - Element Combinations</title>
-    <meta name="description" content="Combine crypto elements to discover new possibilities" />
+    <title>Infinite Ideas - Element Combinations</title>
+    <meta name="description" content="Combine elements to discover endless possibilities" />
     <script>
       // Immediately set initial theme to prevent flash
       if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
