new checkout experience

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         document.documentElement.classList.add('dark');
       }
     </script>
+    <!-- Stripe.js -->
+    <script src="https://js.stripe.com/v3/"></script>
   </head>
   <body>
     <div id="root"></div>
